
	* tur-preinit-fails:
	- rnd results too good:
	-- maybe they would be with these params for fr-en, en-en too.
	- pre results too bad:
	-- buggy trainer
	-- buggy big model
	-- buggy vocab copy
	-- buggy corpus: tokenization capitalization domain etc
	--- check most frequent tokens, check lm cross entropy
	--- maybe fr-en would not do as good if en side was not identical

2015-12-29  Deniz Yuret  <dyuret@ku.edu.tr>

	* DOCS:
	- reading data: readdlm, HTTPClient.get
	- data normalization
	- setseed and replicatability
	- trn/tst split
	- minibatching
	- knet function as model
	- list of primitive ops
	- implicit size with dims=(0,)
	- init options to par
	- dot/add vs */+
	- keyword args in knet function
	- knet return
	- knet function as new op
	- compile
	- keyword args to compile
	- forw
	- back
	- update!
	- setp and learning rate
	- other training options
	- get registers and looking at network internals, netprint?
	- 2-arg loss functions
	- 3-arg loss functions (user does not need)
	- load/save data in jld
	- load/save model in jld
	- elementwise and broadcasting operations: .+ .- .* ./
	- julia array indexing, colon operator.
	- sum, mean, std with dims option.
	- size with without dims option.
	- regression and quadloss (housing example)
	- classification and softloss
	- convolution and pooling
	- dropout
	- read-before-write ops, sequences, rnns: language model? smaller character based word model?
	- conditionals: s2c, s2s
	- perceptron, kernel perceptron
	- data types net, reg, stackentry access functions etc. don't forget to export whatever is mentioned in docs.
	- anatomy of a knet function.
	- structured learning
	- nce

	* TODO:
	0000 example: barret: check on tur/uzb experiments. try pre-training for low resource mt: we can use rnnlm or copy, may need permutation matrix before encoder. work on pretraining for low resource translation using s2s or lm models.