@@ -1,10 +1,10 @@
 using Knet, Base.Test
 
 # Uncomment these if you want lots of messages:
-import Base.Test: default_handler, Success, Failure, Error
-default_handler(r::Success) = info("$(r.expr)")
-default_handler(r::Failure) = warn("FAIL: $(r.expr)")
-default_handler(r::Error)   = warn("$(r.err): $(r.expr)")
+# import Base.Test: default_handler, Success, Failure, Error
+# default_handler(r::Success) = info("$(r.expr)")
+# default_handler(r::Failure) = warn("FAIL: $(r.expr)")
+# default_handler(r::Error)   = warn("$(r.err): $(r.expr)")
 
 load_only = true
 isapprox3(a,b,c)=all(map((x,y,z)->isapprox(x,y;rtol=z), a,b,c))
