@@ -10,6 +10,9 @@
 	-- buggy corpus: tokenization capitalization domain etc
 	--- check most frequent tokens, check lm cross entropy
 	--- maybe fr-en would not do as good if en side was not identical
+	- fixed copy problem but still bad pretraining results
+	-- running pre2 to confirm
+	-- english vocab different or distribution different
 
 2015-12-29  Deniz Yuret  <dyuret@ku.edu.tr>
 
@@ -56,7 +59,6 @@
 	- nce
 
 	* TODO:
-	0000 example: barret: check on tur/uzb experiments. try pre-training for low resource mt: we can use rnnlm or copy, may need permutation matrix before encoder. work on pretraining for low resource translation using s2s or lm models.
 	0001 - update docs, remove dead code, update comments, check src TODO, - src/op/compound.jl: finish documentation for all ops.
 	0003 - op/loss.jl: Fix/test all losses.  Update comments del l.y.  No need for forw.  Just loss, which returns loss and sets gradient.  Check tmp use avoid alloc.  Retire/fix logploss, xentloss, percloss, scalloss. -- src/op/loss.jl: cleanup, move out of op.
 	0003 use templated code for cuda kernels
@@ -64,6 +66,7 @@
 	0011 example: yonatan: language learning model
 	0012 example: aliya: try bit representation on ipa
 	0070 ai-mtg: kernels and perceptrons. kperceptron.jl: reimplement within the new framework. perceptron and structured perceptron examples. perclossback: these should be scaled 1/nx, why isn't our gradient check complaining? reimplement averaging. for perceptron.
+	0100 example: barret: check on tur/uzb experiments. try pre-training for low resource mt: we can use rnnlm or copy, may need permutation matrix before encoder. work on pretraining for low resource translation using s2s or lm models.
 	0101 example: character convolution models.
 	0101 example: many-to-one and one-to-many mt training.  mt models that fix the hidden state.  swapping input-output languages fixing the hidden state.  learning paraphrase models from mt models.
 	0101 example: need something for turkish translation to report to tubitak
